--- a/activity_recognition/creating_datafiles.ipynb
+++ b/activity_recognition/creating_datafiles.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,189 +26,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_data_dir = 'D:/activity_file/jpg'"
+    "root_data_dir = 'G:\\\\video_data\\\\activity_file\\\\data_files\\\\'\n",
+    "csv_path = 'G:\\\\video_data\\\\activity_file\\\\csv_files\\\\'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['Fencing', 'GolfSwing', 'HighJump']\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_list = os.listdir(root_data_dir)\n",
-    "print(file_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'Fencing': 0, 'GolfSwing': 1, 'HighJump': 2}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Assigning labels to each flower category\n",
-    "i = 0\n",
-    "num_classes = len(file_list)\n",
-    "labels_name=dict()\n",
-    "for name in file_list:\n",
-    "    labels_name[name] = i\n",
-    "    i += 1\n",
-    "print(labels_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop over every activity category in train and test \n",
-    "train_data_path = os.path.join('activity_data','train')\n",
-    "test_data_path = os.path.join('activity_data','test')"
+    "def create_csvfiles(data_path, csv_path, labels):\n",
+    "    data_dir_list = os.listdir(data_path)[:2]\n",
+    "    for data_dir in data_dir_list: # looping over every activity\n",
+    "        label = labels[str(data_dir)]\n",
+    "        video_list = os.listdir(os.path.join(data_path,data_dir))\n",
+    "        for vid in video_list: # looping over every video within an activity\n",
+    "            train_df = pd.DataFrame(columns=['FileName', 'Label', 'ClassName'])\n",
+    "            img_list = os.listdir(os.path.join(data_path,data_dir,vid))\n",
+    "            for img in img_list:# looping over every frame within the video\n",
+    "                img_path = os.path.join(data_path,data_dir,vid,img)\n",
+    "                train_df = train_df.append({'FileName': img_path, 'Label': label,'ClassName':data_dir },ignore_index=True)\n",
+    "            file_name='{}_{}.csv'.format(data_dir,vid)\n",
+    "            train_df.to_csv('{}/{}'.format(csv_path, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "\"\\nif not os.path.exists('data_files/train'):\\n    os.mkdir('data_files/train') \\nif not os.path.exists('data_files/test'):\\n    os.mkdir('data_files/test')\\n\""
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "if not os.path.exists('D:/activity_file/data_files'):\n",
-    "    os.mkdir('D:/activity_file/data_files')\n",
-    "'''\n",
-    "if not os.path.exists('data_files/train'):\n",
-    "    os.mkdir('data_files/train') \n",
-    "if not os.path.exists('data_files/test'):\n",
-    "    os.mkdir('data_files/test')\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create csv file for training data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['Fencing', 'GolfSwing', 'HighJump']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
-   "source": [
-    "data_dir_list = os.listdir(root_data_dir)\n",
-    "data_dir_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'D:/activity_file/data_files/train/Fencing_v_Fencing_g01_c01.csv'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-64669ebd5014>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mtrain_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'FileName'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mimg_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Label'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'ClassName'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdata_dir\u001b[0m \u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mfile_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'{}_{}.csv'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mvid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mtrain_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'D:/activity_file/data_files/train/{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\production\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal)\u001b[0m\n\u001b[0;32m   3202\u001b[0m             \u001b[0mdecimal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3203\u001b[0m         )\n\u001b[1;32m-> 3204\u001b[1;33m         \u001b[0mformatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3206\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpath_or_buf\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\production\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    186\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m                 \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 188\u001b[1;33m                 \u001b[0mcompression\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompression_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompression\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    189\u001b[0m             )\n\u001b[0;32m    190\u001b[0m             \u001b[0mclose\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\production\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text)\u001b[0m\n\u001b[0;32m    426\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    427\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 428\u001b[1;33m             \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    429\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mis_text\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    430\u001b[0m             \u001b[1;31m# No explicit encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'D:/activity_file/data_files/train/Fencing_v_Fencing_g01_c01.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "# data_dir_list = os.listdir(train_data_path)\n",
-    "for data_dir in data_dir_list: # looping over every activity\n",
-    "    label = labels_name[str(data_dir)]\n",
-    "    video_list = os.listdir(os.path.join(root_data_dir,data_dir))\n",
-    "    for vid in video_list: # looping over every video within an activity\n",
-    "        train_df = pd.DataFrame(columns=['FileName', 'Label', 'ClassName'])\n",
-    "        img_list = os.listdir(os.path.join(root_data_dir,data_dir,vid))\n",
-    "        for img in img_list:# looping over every frame within the video\n",
-    "            img_path = os.path.join(root_data_dir,data_dir,vid,img)\n",
-    "            train_df = train_df.append({'FileName': img_path, 'Label': label,'ClassName':data_dir },ignore_index=True)\n",
-    "        file_name='{}_{}.csv'.format(data_dir,vid)\n",
-    "        train_df.to_csv('D:/activity_file/data_files/{}'.format(file_name))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create csv files for test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_list = os.listdir(test_data_path)\n",
-    "for data_dir in data_dir_list: # looping over every activity\n",
-    "    label = labels_name[str(data_dir)]\n",
-    "    video_list = os.listdir(os.path.join(test_data_path,data_dir))\n",
-    "    for vid in video_list: # looping over every video within an activity\n",
-    "        test_df = pd.DataFrame(columns=['FileName', 'Label', 'ClassName'])\n",
-    "        img_list = os.listdir(os.path.join(test_data_path,data_dir,vid))\n",
-    "        for img in img_list: # looping over every frame within the video\n",
-    "            img_path = os.path.join(test_data_path,data_dir,vid,img)\n",
-    "            test_df = test_df.append({'FileName': img_path, 'Label': label,'ClassName':data_dir },ignore_index=True)\n",
-    "        file_name='{}_{}.csv'.format(data_dir,vid)\n",
-    "        test_df.to_csv('data_files/test/{}'.format(file_name))"
+    "def func(root, csv_path):\n",
+    "    if not os.path.exists(csv_path):\n",
+    "        os.mkdir(csv_path)\n",
+    "    labels_name = None\n",
+    "    for sub_dir in os.listdir(root):\n",
+    "        data_path = os.path.join(root, sub_dir)\n",
+    "        data_csv = os.path.join(csv_path, sub_dir)\n",
+    "        if not os.path.exists(data_csv):\n",
+    "            os.mkdir(data_csv)\n",
+    "        # print(data_path, data_csv)\n",
+    "        if labels_name is None:\n",
+    "            i = 1\n",
+    "            labels_name=dict()\n",
+    "            for name in os.listdir(data_path):\n",
+    "                labels_name[name] = i\n",
+    "                i += 1\n",
+    "            # print(labels_name)\n",
+    "        create_csvfiles(data_path, data_csv, labels_name)\n",
+    "\n",
+    "func(root_data_dir, csv_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -227,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
